# etf-quant-advisor

./: .env.example  .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt
config/: settings.yaml.example
migrations/: 001_initial_schema.sql  002_add_trade_status.sql  003_add_performance_tracking.sql
scripts/: init_data.py
src/analysis/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
src/core/: __init__.py  daily_runner.py  data_integrity.py  evening_runner.py
src/data/: __init__.py  database.py
src/data/models/: __init__.py  etf.py  indicator.py  performance.py  quote.py  signal.py
src/data/repository/: __init__.py  etf_repo.py  indicator_repo.py  performance_repo.py  quote_repo.py  signal_repo.py  strategy_repo.py
src/data/schema/: __init__.py  base.py  etf.py  indicator.py  performance.py  quote.py  signal.py  strategy.py
src/data/service/: __init__.py  etf_service.py  indicator_service.py  performance_service.py  quote_service.py  signal_service.py  trading_calendar_service.py
src/data/source/: akshare_client.py  baostock_client.py  request_client.py
src/output/: __init__.py  reporter.py
src/strategy/: __init__.py  right_side.py  risk_control.py
src/utils/: __init__.py  config.py  logger.py  rate_limiter.py  request.py
